--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.3",
+    "@astrolib/seo": "^0.2.1",
     "@barnabask/astro-minisearch": "^1.1.0",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/typography": "^0.5.8",
