--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "astro": "^1.8.0",
     "astro-robots-txt": "^0.3.10",
     "autoprefixer": "^10.4.13",
+    "glob": "^8.0.3",
+    "linkedom": "^0.14.21",
     "marked": "^4.2.5",
     "mdast-util-to-string": "^3.1.0",
     "postcss-import": "^15.1.0",
