--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.0.10",
     "astro": "^1.8.0",
     "astro-robots-txt": "^0.3.10",
+    "astro-tabs": "^0.1.7",
     "autoprefixer": "^10.4.13",
     "glob": "^8.0.3",
     "linkedom": "^0.14.21",
@@ -34,6 +35,7 @@
     "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
     "sanitize-html": "^2.8.1",
+    "sass": "^1.57.1",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
