--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "linkedom": "^0.14.21",
     "marked": "^4.2.5",
     "mdast-util-to-string": "^3.1.0",
+    "node-html-markdown": "^1.3.0",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
     "react": "^18.2.0",
