--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: "drud/ddev.com-build"
+          ref: main
+          token: ${{ secrets.GH_PAT }}
       - uses: actions/download-artifact@v3
         with:
           name: build
