--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "linkedom": "^0.14.21",
     "marked": "^4.2.5",
     "mdast-util-to-string": "^3.1.0",
+    "octokit": "^2.0.14",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
     "react": "^18.2.0",
