--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,6 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    env:
-      TOKEN: ${{ secrets.GITHUB_TOKEN }}
     timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
@@ -18,6 +16,8 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Lint
         run: npm run textlint
       - uses: actions/upload-artifact@v3
