--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "textlint:fix": "./node_modules/.bin/textlint 'src/pages/**' --fix"
   },
   "dependencies": {
-    "@astrojs/prefetch": "^0.1.1",
-    "@astrojs/react": "^1.2.2",
+    "@astrojs/image": "^0.13.1",
+    "@astrojs/prefetch": "^0.1.2",
+    "@astrojs/react": "^2.0.2",
     "@astrojs/rss": "^2.0.0",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/sitemap": "^1.0.1",
+    "@astrojs/tailwind": "^3.0.1",
     "@astrolib/seo": "^0.2.1",
     "@barnabask/astro-minisearch": "^1.1.0",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/typography": "^0.5.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "astro": "^1.8.0",
+    "astro": "^2.0.4",
     "astro-robots-txt": "^0.3.10",
     "astro-tabs": "^0.1.7",
     "autoprefixer": "^10.4.13",
