Clear previous artifacts to avoid quota.
Each build gets committed anyway, so there’s no reason to keep these around.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Lint
         run: npm run textlint
+      - name: Delete previous artifacts
+        uses: jimschubert/delete-artifacts-action@v1
+        with:
+          artifact_name: build
+          min_bytes: "0"
       - uses: actions/upload-artifact@v3
         with:
           name: build
