--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@astrojs/rss": "^2.0.0",
     "@astrojs/sitemap": "^1.0.1",
     "@astrojs/tailwind": "^3.0.1",
-    "@astrolib/seo": "^0.3.0",
     "@barnabask/astro-minisearch": "^1.1.0",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/typography": "^0.5.8",
@@ -27,6 +26,7 @@
     "astro": "^2.0.4",
     "astro-imagetools": "^0.7.6",
     "astro-robots-txt": "^0.3.10",
+    "astro-seo": "^0.7.0",
     "astro-tabs": "^0.1.7",
     "autoprefixer": "^10.4.13",
     "github-slugger": "^2.0.0",
