Update some namespaces.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@drud/ddev.com-astro",
+  "name": "@ddev/ddev.com-astro",
   "type": "module",
   "version": "0.0.1",
   "private": true,
