--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "astro-imagetools": "^0.7.6",
     "astro-robots-txt": "^0.3.10",
     "astro-seo": "^0.7.0",
-    "astro-tabs": "^0.1.7",
     "autoprefixer": "^10.4.13",
     "github-slugger": "^2.0.0",
     "glob": "^8.0.3",
     "linkedom": "^0.14.21",
     "marked": "^4.2.5",
     "mdast-util-to-string": "^3.1.0",
+    "nanoid": "^4.0.1",
     "octokit": "^2.0.14",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
