--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           path: ./
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          branch: main
+          branch: ${{ github.ref_name }}
           commit_message: ddev.com-front-end@${{ github.sha }}
       - name: Delete artifacts
         uses: jimschubert/delete-artifacts-action@v1
