--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
           path: ./
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          branch: ${{ github.head_ref || github.ref_name }}
           create_branch: true
           commit_message: ddev.com-front-end@${{ github.sha }}
       - name: Delete artifacts
