--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "astro-robots-txt": "^0.3.10",
     "astro-seo": "^0.7.0",
     "autoprefixer": "^10.4.13",
+    "base64-img": "^1.0.4",
     "github-slugger": "^2.0.0",
     "glob": "^8.0.3",
+    "image-size": "^1.0.2",
     "linkedom": "^0.14.21",
     "marked": "^4.2.5",
     "mdast-util-to-string": "^3.1.0",
