--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "textlint": "^13.0.5",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-no-todo": "^2.0.1",
+    "textlint-rule-stop-words": "^3.0.1",
     "textlint-rule-terminology": "^3.0.4"
   }
 }
