--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "textlint:fix": "./node_modules/.bin/textlint 'src/content/**' --fix"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.8",
     "@astrojs/prefetch": "^0.2.1",
     "@astrojs/react": "^2.0.2",
     "@astrojs/rss": "^2.0.0",
@@ -20,10 +21,11 @@
     "@astrojs/tailwind": "^3.0.1",
     "@barnabask/astro-minisearch": "^2.1.1",
     "@heroicons/react": "^2.0.13",
+    "@octokit-next/core": "^2.7.0",
     "@tailwindcss/typography": "^0.5.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "astro": "^2.0.4",
+    "astro": "^2.4.5",
     "astro-imagetools": "^0.8.1",
     "astro-robots-txt": "^0.5.0",
     "astro-seo": "^0.7.0",
@@ -37,6 +39,7 @@
     "mdast-util-to-string": "^3.1.0",
     "nanoid": "^4.0.1",
     "octokit": "^2.0.14",
+    "octokit-next": "^1.2.1",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
     "react": "^18.2.0",
