--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/tailwind": "^3.0.1",
     "@barnabask/astro-minisearch": "^2.1.1",
     "@heroicons/react": "^2.0.13",
+    "@octokit/auth-app": "^4.0.13",
     "@tailwindcss/typography": "^0.5.8",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
