--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "glob": "^10.2.2",
     "image-size": "^1.0.2",
     "linkedom": "^0.14.21",
+    "luxon": "^3.3.0",
     "marked": "^4.2.5",
     "mdast-util-to-string": "^3.1.0",
     "nanoid": "^4.0.1",
@@ -50,6 +51,8 @@
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4",
+    "@types/luxon": "^3.3.1",
     "@types/marked": "^4.0.8",
     "dotenv": "^16.0.3",
     "textlint": "^13.0.5",
