--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -15,7 +15,7 @@ web_extra_exposed_ports:
   http_port: 4322
   https_port: 4321
 
-# The extra -- is a Vite item
+# The extra -- in `npm run dev -- --host` is a Vite requirement
 # https://github.com/vitejs/vite/discussions/3396
 web_extra_daemons:
   - name: astro-dev-daemon
@@ -23,12 +23,10 @@ web_extra_daemons:
     directory: /var/www/html
 hooks:
   post-start:
-    - exec: echo '================================================================================='
-    - exec: echo '                                  NOTICE'
-    - exec: echo '================================================================================='
-    - exec: echo 'The Astro dev container is ready.'
-    - exec: echo
-    - exec: echo "By default it will be available at port 4321 - URL:4321"
-    - exec: echo "Use ddev describe to confirm if this doesn't work."
-    - exec: echo 'Check the status of startup by running "ddev logs --follow --time"'
-    - exec: echo '================================================================================='
+    - exec-host: echo -e "                                  NOTICE                                        \n
+                         =================================================================================\n
+                         =================================================================================\n
+                          The Astro dev container is ready \n
+                          By default it will be available at port 4321 - URL:4321 \n
+                          Use ddev describe to confirm if this doesn't work. \n
+                          Check the startup status by running ddev logs --follow --time \n"
