--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "astro": "^3.2.0",
+    "astro-expressive-code": "^0.26.2",
     "astro-imagetools": "^0.9.0",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
