Testing new settings to avoid EPERM error.

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -6,7 +6,7 @@ additional_fqdns: []
 performance_mode: none
 use_dns_when_possible: true
 web_environment: []
-nodejs_version: "18"
+nodejs_version: "20"
 
 # 4321 is Astro Vite default
 web_extra_exposed_ports:
@@ -17,10 +17,10 @@ web_extra_exposed_ports:
 
 # The extra -- in `npm run dev -- --host` is a Vite requirement
 # https://github.com/vitejs/vite/discussions/3396
-web_extra_daemons:
-  - name: astro-dev-daemon
-    command: "npm run dev -- --host"
-    directory: /var/www/html
+# web_extra_daemons:
+#   - name: astro-dev-extra
+#     command: "npm run dev -- --host"
+#     directory: /var/www/html
 hooks:
   post-start:
     - exec-host: echo -e "                                  NOTICE                                        \n
