--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -37,7 +37,6 @@ hooks:
                          =================================================================================\n
                          =================================================================================\n
                           The Astro dev container is ready \n
-                          By default it will be available at \e[32m${DDEV_PRIMARY_URL}:4321\e[0m \n
-                          Use ddev describe to confirm if this doesn't work. \n
-                          Check the startup status by running \e[32mddev logs --follow --time\e[0m \n"
+                          Hot Module Reloadin (HMR) is avaliable at \e[32m${DDEV_PRIMARY_URL}:4321\e[0m \n
+                          To troubleshoot any isues run \e[35mddev describe\e[0m or \e[35mddev logs --follow --time\e[0m \n"
 
