--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,5 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run textlint
-      - name: Lint
+      - name: Build the site
         run: npm run build
