Add npm run build to the ci test. (#173)
* Add npm run build to the ci test.

* Changes the label.

* Changes the label v2.

* updated github action script.

* updated github action script v2.

* Try adding the GITHUB_TOKEN

---------

Co-authored-by: Randy Fay <randy@randyfay.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,14 @@ on:
   pull_request:
     branches: [main]
   workflow_dispatch:
+
+# Allow this job to clone the repo and create a page deployment
+permissions:
+  contents: read
+
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build:
     timeout-minutes: 15
@@ -18,3 +26,5 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run textlint
+      - name: Install, build, and upload your site output
+        uses: withastro/action@v2
