--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
     "autoprefixer": "^10.4.16",
+    "base64-img": "^1.0.4",
     "github-slugger": "^2.0.0",
     "glob": "^10.3.10",
     "image-size": "^1.0.2",
@@ -35,7 +36,6 @@
     "marked": "^9.0.3",
     "mdast-util-to-string": "^4.0.0",
     "nanoid": "^5.0.1",
-    "node-base64-image": "^2.0.6",
     "octokit": "^3.1.1",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
