--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,7 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run textlint
+      - name: Remove yarn.lock because it breaks withastro/action@v2
+        run: find node_modules -name "yarn.lock" -exec rm -f {} +
       - name: Install, build, and upload your site output
         uses: withastro/action@v2
