--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,16 +12,17 @@ permissions:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  NODE_VERSION: 20
 
 jobs:
   build:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ env.NODE_VERSION }}
       - name: Install dependencies
         run: npm ci
       - name: Lint
@@ -30,3 +31,5 @@ jobs:
         run: find node_modules -name "yarn.lock" -exec rm -f {} +
       - name: Install, build, and upload your site output
         uses: withastro/action@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
