--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "astro": "^4.5.10",
+    "astro-rehype-relative-markdown-links": "^0.15.0",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
     "autoprefixer": "^10.4.16",
