ci: add prettier check to github action test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,8 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run textlint
+      - name: Prettier
+        run: npx prettier --check .
       - name: Install, build, and upload your site output
         uses: withastro/action@v2
         with:
