--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@astrojs/react": "^3.1.0",
     "@astrojs/rss": "^4.0.0",
     "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/tailwind": "^5.1.0",
     "@barnabask/astro-minisearch": "^2.1.1",
     "@heroicons/react": "^2.0.13",
     "@octokit/auth-app": "^6.0.1",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
-    "astro": "^5.1.0",
+    "astro": "^5.2.3",
     "astro-rehype-relative-markdown-links": "^0.17.3",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
@@ -46,7 +46,7 @@
     "sanitize-html": "^2.11.0",
     "sass": "^1.68.0",
     "sharp": "^0.32.6",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
     "@types/marked": "^4.0.8",
@@ -56,5 +56,9 @@
     "textlint-rule-no-todo": "^2.0.1",
     "textlint-rule-stop-words": "^4.0.0",
     "textlint-rule-terminology": "^4.0.0"
+  },
+  "optionalDependencies": {
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
+    "lightningcss-linux-x64-gnu": "^1.29.1"
   }
 }
