--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "prettier": "./node_modules/.bin/prettier --check .",
+    "prettier:fix": "./node_modules/.bin/prettier --write .",
     "textlint": "./node_modules/.bin/textlint 'src/content/**'",
     "textlint:fix": "./node_modules/.bin/textlint 'src/content/**' --fix"
   },
@@ -51,11 +53,12 @@
   "devDependencies": {
     "@types/marked": "^4.0.8",
     "dotenv": "^16.3.1",
-    "textlint": "^13.0.5",
+    "prettier": "^3.6.2",
+    "textlint": "^15.1.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-no-todo": "^2.0.1",
-    "textlint-rule-stop-words": "^4.0.0",
-    "textlint-rule-terminology": "^4.0.0"
+    "textlint-rule-stop-words": "^5.1.2",
+    "textlint-rule-terminology": "^5.2.13"
   },
   "optionalDependencies": {
     "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
