--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Lint
-        run: npm run textlint || printf "Run 'ddev textlint' locally to fix it.\n\n"
+        run: npm run textlint || { printf "Run 'ddev textlint' locally to fix it.\n\n"; exit 1; }
       - name: Prettier
-        run: npm run prettier || printf "\nRun 'ddev prettier' locally to fix it.\n\n"
+        run: npm run prettier || { printf "\nRun 'ddev prettier' locally to fix it.\n\n"; exit 1; }
       - name: Install, build, and upload your site output
         uses: withastro/action@v2
         with:
