Copy button on blog pages and getting started page.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
-    "astro": "^5.16.3",
+    "astro": "^5.16.5",
     "astro-rehype-relative-markdown-links": "^0.17.3",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
@@ -54,6 +54,7 @@
     "@types/marked": "^4.0.8",
     "dotenv": "^16.3.1",
     "prettier": "^3.6.2",
+    "shiki-transformer-copy-button": "^0.0.5",
     "textlint": "^15.1.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-no-todo": "^2.0.1",
